ecell-3.1.107: 19-Jun-2009

 * Fixed a bug in ODEStepper that causes SIGABRT under the circumstances
   no processes are associated to the stepper. Noticed by Sachio Nohara.
   Thanks.

 * Patched libltdl so it would not be interfered by the newer versions of
   libtool.

 * Migrated to libsbml 3.x.  SBML to EML and EML to SBML converter are now
   officially confirmed to work with it.

 * Changed ecell3-session-monitor so that it would never change the current
   working directory to the one the model file is located.
   Patch by Michele Mattioni.  Thanks.

 * Console class in the ecell3-session-manager script insensibly imports
   the attributes of a SessionManager instance into the global scope, which
   turned out to obstruct the definition of classes in the user script.
   Noticed by Giuseppe Aprea.  Thanks.


ecell-3.1.107RC4: 5-Apr-2009

 * Resource files required by the frontends (session monitor and model editor)
   were completely missing in the tarballs due to the errors in Makefile.
   Noticed by 김한조.  Thanks.

 * Console class in the ecell3-session-manager script insensibly imports
   the attributes of a SessionManager instance into the global scope, which
   turned out to obstruct the definition of classes in the user script.
   Noticed by Giuseppe Aprea.  Thanks.


ecell-3.1.107RC3: 11-Mar-2009

 * Removed deprecate API calls in session-monitor. This enables it to run
   on Mac OS X with the native GTK+.

 * Fixed bugs in DM compiler tools.

 * Fixed weird behavior of the expression compiler that is used in
   Expression*Process'es.

 * Eliminate usage of string module.

 * Fixed win32 build.


ecell-3.1.107RC2: 6-Feb-2009

 * Fixed a bug in ecell.Session.saveLoggerData().

 * Fixed a bug in ecell.ECDDataFile.


ecell-3.1.107RC1: 5-Feb-2009

 * Fixed compilation problem on newer GCC (>= 4.3).

 * Reorganized the source tree structure.

   - Integrated pyecs into pyecell.

   - Merged ecell.emc into ecell.ecs to avoid static initializer weirdness in