@@ -1,4 +1,5 @@
 AC_REVISION([$Id$])dnl
+sinclude([../libltdl/acinclude.m4])
 
 dnl Process this file with autoconf to produce a configure script.
 
